--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/vercel": "^7.3.1",
     "astro": "^4.4.0",
     "typescript": "^5.3.3"
   },
