style: 💄 add prettier, eslint and format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "astro-build.astro-vscode"
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "astro",
+        "typescript",
+        "typescriptreact"
+      ],
+      "prettier.documentSelectors": ["**/*.astro"],
+      "[astro]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      }
 }
