--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
     "astro": "^4.4.0",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
