--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.5.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
+    "@fontsource-variable/montserrat": "^5.0.17",
     "astro": "^4.4.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
