--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/check": "^0.5.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.1",
-    "@fontsource-variable/montserrat": "^5.0.17",
+    "@fontsource/metropolis": "^5.0.7",
     "astro": "^4.4.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "prettier": "^3.2.5",
     "prettier-config-standard": "^7.0.0",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
