--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ FIREBASE_TOKEN_URI=YOUR_TOKEN_URI
 FIREBASE_AUTH_CERT_URL=YOUR_AUTH_CERT_URL
 FIREBASE_CLIENT_CERT_URL=YOUR_CLIENT_CERT_URL
 FIREBASE_UNIVERSE_DOMAIN=YOUR_UNIVERSE_DOMAIN
+TWITCH_CLIENT_ID="TWITCH_CLIENT_ID"
+TWITCH_CLIENT_SECRET="TWITCH_CLIENT_SECRET"
+AUTH_SECRET="AUTH_SECRET"
+AUTH_TRUST_HOST=true
