--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@astrojs/check": "^0.5.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.3.1",
+    "@astrojs/vercel": "^7.5.4",
+    "@auth/core": "^0.18.6",
     "@fontsource/metropolis": "^5.0.7",
     "astro": "^4.4.0",
+    "auth-astro": "^4.1.1",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "tailwindcss": "^3.4.1",
