--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/check": "^0.5.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.1",
+    "@auth/core": "^0.32.0",
     "@fontsource/metropolis": "^5.0.7",
     "astro": "^4.4.0",
+    "auth-astro": "^4.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
