--- a/package.json
+++ b/package.json
@@ -8,25 +8,35 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
+    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\"",
+    "migrate": "ts-node --project tsconfig.migrations.json node_modules/node-pg-migrate/bin/node-pg-migrate.js --envPath .env.local --database-url-var POSTGRES_URL",
+    "migrate:up": "npm run migrate up"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.1",
     "@fontsource/metropolis": "^5.0.7",
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
+    "@vercel/postgres": "^0.9.0",
+    "arctic": "^1.9.1",
     "astro": "^4.4.0",
+    "lucia": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^7.0.1",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "node-pg-migrate": "^7.5.2",
     "prettier": "^3.2.5",
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "ts-node": "^10.9.2"
   }
 }
