chore: 🤖 add colorize config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,5 +4,6 @@
     "esbenp.prettier-vscode",
     "bradlc.vscode-tailwindcss"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [],
+  
 }
