--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
+    "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.2",
     "@fontsource/metropolis": "^5.0.7",
     "@lucia-auth/adapter-postgresql": "^3.1.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vercel/postgres": "^0.9.0",
     "arctic": "^1.9.1",
     "astro": "^4.4.0",
     "lucia": "^3.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
