--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vercel/postgres": "^0.9.0",
     "arctic": "^1.9.1",
     "astro": "^4.4.0",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.4",
     "lucia": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
