--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro": "^4.4.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.4",
+    "feather-icons": "^4.29.2",
     "lucia": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +36,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/feather-icons": "^4.29.4",
     "@typescript-eslint/parser": "^7.0.1",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
