--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/vercel": "^7.7.2",
     "@fontsource/metropolis": "^5.0.7",
     "@lucia-auth/adapter-postgresql": "^3.1.2",
+    "@nanostores/react": "^0.7.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vercel/postgres": "^0.9.0",
@@ -30,6 +31,7 @@
     "cssnano": "^7.0.4",
     "feather-icons": "^4.29.2",
     "lucia": "^3.2.0",
+    "nanostores": "^0.10.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.1",
